hphp/hack/test/typecheck/control_flow/do_def_after_break.php.exp
File "do_def_after_break.php", line 10, characters 10-11:
Variable `$x` is undefined, or not always defined. (Naming[2050])
File "do_def_after_break.php", line 3, characters 17-18:
Did you mean `$b` instead?
